landing page buttons 3D look

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                                 <a href="https://flashcoin.io/"><img src="images/flash-wallet.png" /></a>
                             </div>
                             <div class="col-xs-9 col-sm-9 text-right">
-                                <p class="link-top"><a href="" ng-click="gotoAnchor('wallets')">Wallets</a> <a href="" ng-click="gotoAnchor('exchanges')">Exchanges</a> <a href="" ng-click="gotoAnchor('whitepaper')">Whitepaper</a> <a href="" ng-click="gotoAnchor('roadmap')">RoadMap</a> <a href="https://explorer.flashcoin.io/">Explorer</a> <a href="https://charts.flashcoin.io/">Charts</a> <a href="https://nodes.flashcoin.io/">Nodes</a></p>
+                                <p class="link-top"><a href="" ng-click="gotoAnchor('wallets')">Wallets</a> | <a href="" ng-click="gotoAnchor('exchanges')">Exchanges</a> | <a href="" ng-click="gotoAnchor('whitepaper')">Whitepaper</a> | <a href="" ng-click="gotoAnchor('roadmap')">RoadMap</a> | <a href="https://explorer.flashcoin.io/">Explorer</a> | <a href="https://charts.flashcoin.io/">Charts</a> | <a href="https://nodes.flashcoin.io/">Nodes</a></p>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-7 text-center pad0 pull-right" id="content-slide1">
