minor spell correction and govnodes added into links and mobile responsiveness changes

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <header class="header">
                     <div class="container" ng-controller="Flashcoin">
                         <div class="col-xs-12">
-                            <div class="col-xs-3 col-sm-3 logo">
+                            <div class="col-xs-12 col-sm-3 logo">
                                 <a href="https://flashcoin.io/"><img src="images/flash-wallet.png" /></a>
                             </div>
-                            <div class="col-xs-9 col-sm-9 text-right">
-                                <p class="link-top"><a href="" ng-click="gotoAnchor('wallets')">Wallets</a> | <a href="" ng-click="gotoAnchor('exchanges')">Exchanges</a> | <a href="" ng-click="gotoAnchor('whitepaper')">Whitepaper</a> | <a href="" ng-click="gotoAnchor('roadmap')">RoadMap</a> | <a href="https://explorer.flashcoin.io/">Explorer</a> | <a href="https://charts.flashcoin.io/">Charts</a> | <a href="https://nodes.flashcoin.io/">Nodes</a></p>
+                            <div class="col-xs-12 col-sm-9 link-top-container">
+                                <p class="link-top"><a href="" ng-click="gotoAnchor('wallets')">Wallets</a> | <a href="" ng-click="gotoAnchor('exchanges')">Exchanges</a> | <a href="" ng-click="gotoAnchor('govnodes')">GovNodes</a> | <a href="" ng-click="gotoAnchor('whitepaper')">Whitepaper</a> | <a href="" ng-click="gotoAnchor('roadmap')">RoadMap</a> | <a href="https://explorer.flashcoin.io/">Explorer</a> | <a href="https://charts.flashcoin.io/">Charts</a> | <a href="https://nodes.flashcoin.io/">Nodes</a></p>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-7 text-center pad0 pull-right" id="content-slide1">
@@ -174,15 +174,16 @@
                             <h2>EXCHANGES</h2>
                             <p class="text-center"><a href="https://www.cryptopia.co.nz/" target="_blank"><img src="images/cryptopia.png" width="40%"></a></p>
                         </div>
-                        <div class="slide-4">
+                        <div class="slide-4" id="govnodes">
                             <div class="container">
                                 <div class="group-content col-xs-12">
+									<h2>Governance Nodes</h2>
                                     <h3>The FLASH Governance Model</h3>
                                     <p> FLASH GovNodes are another unique and streamlined feature of FLASH that we think will help keep FLASH as a friendly and “low tax” zone for crypto.</p>
-                                    <p>- There will be 151 FLASH GovNodes (Goverance Nodes) operated by FLASH Delegates.  These govern the FLASH blockchain and software.</p>
+                                    <p>- There will be 151 FLASH GovNodes (Governance Nodes) operated by FLASH Delegates.  These govern the FLASH blockchain and software.</p>
                                     <p>- The GovNodes will be operated and administered by a subset of FLASH holders. In order to have the right to run a GovNode, a person will be required to acquire and maintain ownership of, or “stake”, 1,000,000 FLASH,which must remain “staked” for as long as he operates a GovNode.  In addition, a foundation based in Liechtenstein will be responsible for the ongoing development of the GovNodes and the maintenance of the FLASHcoin Software.</p></li>
                                     <p>- FLASHcoin is a delegated proof of work protocol that enables quicker and more efficient processing of blockchain transactions than other proof of work protocols. The consensus of all the GovNodes randomly assigns the validation of FLASH transactions to a subset of several dozen mining nodes. This allows for quicker processing times than traditional proof of work based protocols, which require a much larger number of mining nodes to validate transactions. Any FLASH holder has the opportunity to operate a mining node and be eligible to participate in the validation of FLASH transactions by staking 10,000,000 FLASH.</p>
-                                    <p>- The GovNodes also assist in the governance of Flashcoin. FLASH holders can propose changes to the Software, governance or transaction fee structure of Flashcoin by posting proposals on the Flashcoin.io website. Proposals can then be nominated for an official vote by receiving at least ten affirmative votes from the GovNodes. If within 30 days of being posted on Flashcoin.io, a proposal receives ten GovNode votes in its favor, the proposal is eligible for a full vote of all the GovNodes. A proposal may then be adopted by an affirmative vote of eithera majority or a supermajority of the GovNodes, depending on the nature of the proposal. Each GovNode is entitled to one vote, which is cast using a special encrypted key allowing for a digital signature that is unique to each GovNode.</p>
+                                    <p>- The GovNodes also assist in the governance of Flashcoin. FLASH holders can propose changes to the Software, governance or transaction fee structure of Flashcoin by posting proposals on the Flashcoin.io website. Proposals can then be nominated for an official vote by receiving at least ten affirmative votes from the GovNodes. If within 30 days of being posted on Flashcoin.io, a proposal receives ten GovNode votes in its favor, the proposal is eligible for a full vote of all the GovNodes. A proposal may then be adopted by an affirmative vote of either a majority or a supermajority of the GovNodes, depending on the nature of the proposal. Each GovNode is entitled to one vote, which is cast using a special encrypted key allowing for a digital signature that is unique to each GovNode.</p>
                                     <!--<p>- The GovNodes will serve and be subject to the continuous support of the FLASH holder community. An operator of a GovNode may be removed by the FLASH holders at any time upon a vote of sixty seven percent
                                         (67%) of all FLASH holders.</p>!-->
 
