--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="dns-prefetch" href="//s.w.org">
         <link rel="stylesheet" href="css/home.css" type="text/css" media="all">
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="all">
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
 		<script type="text/javascript" src="js/angular-smooth-scroll.js"></script>
         <script type="text/javascript" src="js/flashcoin.js"></script>
