add Addresses with Balance from blockscan

--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
                                 <div class="box-performation" id="box-performation">
                                     <form class="">
                                         <div class="form-group">
-                                            <input class="form-control" type="text" placeholder="Addresses with Balance" value="{{address_with_balance}}"/>
+                                            <div class="input-group form-group col-xs-12 col-sm-6 pull-left">
+                                                <input class="form-control" type="text" placeholder="Addresses with Balance" value="{{address_with_balance}}"/>
+                                                <span class="input-group-addon">&nbsp;</span>
+                                            </div>
+                                            <div class="input-group form-group col-xs-12 col-sm-6 pull-left">
+                                                <input class="form-control" type="text" placeholder="Total Signups" value="{{total_signups}}"/>
+                                            </div>
                                         </div>
                                         <h4>Transactions 24h</h4>
                                         <div class="col-xs-12 form-group">
@@ -259,7 +265,7 @@
 											<tr><td><b>Introducing Remittance</b>: Implementation of remittance application to FWW, Import of private keys for Flash & others in FWW</td><td>Q1, 2018</td></tr>
 											<tr><td><b>Merchant services + FWW Upgrade</b>: Mainnet launch for DPOW and Governance nodes, Credit card purchase of FLASH/BTC/BCH in FWW, Cold storage of private keys as a service, Add Roving ATM application to FWW, Add Merchant tools to FWW, Inclusion of more cryptocurrencies to FWW</td><td>Q2, 2018</td></tr>
 											<tr><td><b>FWW upgrade & Enhancements</b>: Integrate FWW with regional Exchanges and allow FIAT deposits and withdrawals, Hardware wallet integration to FWW, Integration of Flash proprietary USB container as cold storage to FWW</td><td>TBA</td></tr>
-										</tbody> 
+										</tbody>
 									</table>
 								</div>
                             </div>
