added cryptobridge exchange

--- a/index.html
+++ b/index.html
@@ -191,8 +191,17 @@
                             </div>
                         </div>
                         <div id="exchanges" class="exchanges-section text-center">
-                            <h2>EXCHANGES</h2>
-                            <p class="text-center"><a href="https://www.cryptopia.co.nz/" target="_blank"><img src="images/cryptopia.png" width="40%"></a></p>
+							<div class="container">
+								<h2>EXCHANGES</h2>
+								<div>
+									<div class="col-xs-6 text-center">
+										<a href="https://www.cryptopia.co.nz/" target="_blank"><img id="cryptopiaexc-logo" src="images/cryptopia.png" width="40%"></a>
+									</div>
+									<div class="col-xs-6 text-center">
+										<a href="https://crypto-bridge.org/" target="_blank"><img src="images/cryptobridge.png" width="40%"></a>
+									</div>
+								</div>
+                            </div>
                         </div>
                         <div class="slide-4" id="govnodes">
                             <div class="container">
