Telegram Link added to landing page

--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
                                         <h2><a target="_blank" href="https://discord.gg/2nFmMqA">Discord</a></h2>
                                     </div>
                                     <div class="col text-center">
+                                        <a class="telegram" title="Telegram" href="https://t.me/flashcoin_io" target="_blank"><i class="fa"><img src="images/telegram.png"></i></a>
+                                        <h2><a target="_blank" href="https://t.me/flashcoin_io">Telegram</a></h2>
+                                    </div>
+                                    <div class="col text-center">
                                         <a title="Facebook" href="https://www.facebook.com/FlashCoin-1800026016723751" target="_blank">
                                             <i class="fa">
                                                 <img src="images/facebook.png">
