added coinexchange.io in exchange listing

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>FLASH</title>
         <link rel="shortcut icon" href="images/favicon.ico" title="Favicon">
         <link rel="dns-prefetch" href="//s.w.org">
-        <link rel="stylesheet" href="css/home.css" type="text/css" media="all">
+        <link rel="stylesheet" href="css/home.css?123" type="text/css" media="all">
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="all">
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
@@ -198,11 +198,14 @@
 							<div class="container">
 								<h2>EXCHANGES</h2>
 								<div>
-									<div class="col-xs-6 text-center">
+									<div class="col-xs-12 col-sm-4 text-center">
 										<a href="https://www.cryptopia.co.nz/" target="_blank"><img id="cryptopiaexc-logo" src="images/cryptopia.png" width="40%"></a>
 									</div>
-									<div class="col-xs-6 text-center">
+									<div class="col-xs-12 col-sm-4 text-center">
 										<a href="https://crypto-bridge.org/" target="_blank"><img src="images/cryptobridge.png" width="40%"></a>
+									</div>
+									<div class="col-xs-12 col-sm-4 text-center">
+										<a href="https://www.coinexchange.io/" target="_blank"><img id="coinexchange-logo" src="images/coinexchange.png" width="40%"></a>
 									</div>
 								</div>
                             </div>
