- Flash Updates - Github link updated - Instagram icon added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>FLASH</title>
         <link rel="shortcut icon" href="images/favicon.ico" title="Favicon">
         <link rel="dns-prefetch" href="//s.w.org">
-        <link rel="stylesheet" href="css/home.css?123" type="text/css" media="all">
+        <link rel="stylesheet" href="css/home.css?234" type="text/css" media="all">
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="all">
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
@@ -71,6 +71,11 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="flash-news col-xs-12">
+                            <marquee style="" scrollamount="10" scrolldelay="1" direction="left" onmouseover="this.stop()" onmouseout="this.start()">
+                                <img id="flash-news-new" src="images/new.gif">&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="docs/FLASH_PressRelease_01292018.pdf">FLASH Updates : FLASH Github is released!!! Click here to read our press release</a>
+                            </marquee>
+                        </div>
 						<a href="#" style="display:none;" class="back-to-top-btn" ng-click="gotoAnchor('top')" ><span class="glyphicon glyphicon-arrow-up"></span> <span class="back-to-top-text">Top</span> </a>
                     </div>
                 </header>
@@ -88,12 +93,12 @@
                                         <h2><a target="_blank" href="https://t.me/flashcoin_io">Telegram</a></h2>
                                     </div>
                                     <div class="col text-center">
-                                        <a title="Facebook" href="https://www.facebook.com/FlashCoin-1800026016723751" target="_blank">
-                                            <i class="fa">
-                                                <img src="images/facebook.png">
-                                            </i>
-                                        </a>
+                                        <a title="Facebook" href="https://www.facebook.com/FlashCoin-1800026016723751" target="_blank"><i class="fa"><img src="images/facebook.png"></i></a>
                                         <h2><a target="_blank" href="https://www.facebook.com/FlashCoin-1800026016723751">Facebook</a></h2>
+                                    </div>
+                                    <div class="col text-center">
+                                        <a title="Instagram" href="https://www.instagram.com/flashcoin.io/" target="_blank"><i class="fa"><img src="images/instagram.png"></i></a>
+                                        <h2><a target="_blank" href="https://www.instagram.com/flashcoin.io/">Instagram</a></h2>
                                     </div>
                                     <div class="col text-center">
                                         <a title="Twitter" href="https://twitter.com/FlashCoins" target="_blank"><i class="fa">
@@ -242,7 +247,7 @@
                                         <li class="col-xs-12 col-sm-4  text-center">
                                             <img src="images/img2-slide8.png" width="140">
                                             <p>Transact with low fees and confirms in seconds.</p>
-                                            <p><a style="color:#F5F5F5;word-break: break-all;" class="size-22" href="https://github.com/flashcoin-io/">https://github.com/flashcoin-io/</a></p>
+                                            <p><a style="color:#F5F5F5;word-break: break-all;" class="size-22" href="https://github.com/flash-coin">https://github.com/flash-coin</a></p>
                                         </li>
                                         <li class="col-xs-12 col-sm-4 text-center">
                                             <img src="images/img3-slide8.png" width="140">
