minor content corrections

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 					<p class="wow fadeInDown">- The GovNodes will be operated and administered by a subset of FLASH holders. In order to have the right to run a GovNode, a person</p>
 				</div>
 				<div class="col-sm-4 section-header">
-					<p class="wow fadeInDown">will be required to acquire and maintain ownership of, or “stake”, 1,000,000 FLASH, which must remain “staked” for as long as he operates a GovNodes. In addition, a foundation based in Liechtenstein will be responsible for the ongoing development of the GovNodes and the maintenance of the FLASHcoin Software.</p>
+					<p class="wow fadeInDown">will be required to acquire and maintain ownership of, or “stake”, 1,000,000 FLASH, which must remain “staked” for as long as he operates a GovNode. In addition, a foundation based in Liechtenstein will be responsible for the ongoing development of the GovNodes and the maintenance of the FLASHcoin Software.</p>
 
 					<p class="wow fadeInDown">FLASHcoin is a delegated proof of work protocol that enables quicker and more efficient processing of blockchain transactions than other proof of work protocols. The consensus of all the GovNodes randomly assigns the validation of FLASH transactions to a subset of several dozen mining nodes. This allows for quicker processing times than traditional proof of work based protocols, which require a much larger number of mining nodes to validate transactions. Any FLASH holder has the opportunity to operate a mining node and be eligible to participate in the validation of FLASH transactions by staking 10,000,000 FLASH.
 					</p>
