--- a/merchant.html
+++ b/merchant.html
@@ -39,7 +39,7 @@
                     <div class="section-header our-team">
                         <h3 class="section-title wow fadeInDown">Merchant Services</h3>
                         <p class="wow fadeInDown" style="color: #414141">FLASH is designed to be SPENT. It’s ideal for merchants, providing very fast processing time to speed customer checkout and very low fees. Credit cards cost merchants billions a year in transaction fees, while FLASH is the true person to person community coin providing transaction processing for under a penny per transaction and no chargebacks or merchant holdback accounts. When you accept a FLASH transaction, it goes right into your wallet and it’s 100% yours to immediately spend.</p>
-                        <p class="wow fadeInDown" style="color: #414141">If a merchant pays 2% transaction fees with credit cards, they have a 10% pretax income on their business, credit card fees are like a 20% tax on their business.  FLASH savings add up quickly and go right to the bottom line.</p>
+                        <p class="wow fadeInDown" style="color: #414141">If a merchant pays 2% transaction fees with credit cards and they have a 10% pretax income on their business, credit card fees are like a 20% tax on their business.  FLASH savings add up quickly and go right to the bottom line.</p>
                         <p class="wow fadeInDown" style="color: #414141">FLASH merchant services will include:</p>
                         <ul class="wow fadeInDown" style="color: #414141">
                           <li>Powerful and easy to use FLASH web wallet can turn any consumer into a merchant</li>
