--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
              <div class="col-sm-2 col-md-2">
                  <div class="team-member wow fadeInUp zl-social-footer" data-wow-duration="400ms" data-wow-delay="100ms">
                      <div class="social-forum-img zl-image-hover">
-                       <a href="https://t.me/flashcoin_io" target="_blank">
+                       <a href="https://t.me/joinchat/C5go9ExsGGNeVvForEgb6w" target="_blank">
                          <img src="images/social-forum-2.png" alt="">
                          <p>Telegram</p>
                        </a>
@@ -516,6 +516,8 @@
                 </div>
             </div>
         </div>
+        <br><br>
+        <p style="color: #fff;text-align: center;"><strong>Please note:</strong> We plan to move to decentralized DPOW and governance model in Q2 2018 and will release the new version of whitepaper for the same in Q1 2018 as mentioned in our roadmap.</p>
     </section>
 
 	 <section id="team">
@@ -626,9 +628,10 @@
            <div class="cont wow fadeInDown zl-timeline-style" data-wow-duration="400ms" data-wow-delay="0ms">
              <p></p>
              <p>
-		- Testnet launch of FLASH DPOW and Gov node<br>
 		- Launch of FLASH Android Wallet<br>
-		- Launch of Merchant Services
+		- Launch of Merchant Services<br>
+    - Blockchain Upgrade<br>
+    - DPOW Whitepaper Launch
              </p>
              <time>FLASH Blockchain & Applications</time>
            </div>
@@ -638,7 +641,7 @@
            <div class="cont wow fadeInDown zl-timeline-style" data-wow-duration="400ms" data-wow-delay="0ms">
              <p>
                 - New features addition and stability improvement<br>
-                - Multi cryptocurrencies support- BTC, BCH, LTC, ETH, ERC20 tokens<br>
+                - Multi cryptocurrencies support- BTC, BCH, LTC<br>
                 - Support for Mammoth.li Exchange
              </p>
              <time>FLASH Web Wallet</time>
@@ -647,6 +650,7 @@
          <li>
            <div class="cont wow fadeInDown zl-timeline-style1" data-wow-duration="400ms" data-wow-delay="0ms">
              <p>
+               - Testnet launch of FLASH DPOW and Gov node<br>
                 - Mainnet Launch of FLASH DPOW and GovNodes<br>
 		- Release of FLASH iOS wallet<br>
 		- Adding new features to Merchant Services<br>
@@ -660,8 +664,9 @@
              <p>
                 - Multi Address support<br>
 		- Import and Export of Private keys<br>
-		- Addition of more cryptocurrencies<br>
+		- Addition of ETH and more cryptocurrencies<br>
 		- Launch of Credit Card purchase
+
              </p>
              <time>FLASH Web Wallet</time>
            </div>
@@ -690,9 +695,8 @@
            <div class="cont wow fadeInDown zl-timeline-style3" data-wow-duration="400ms" data-wow-delay="0ms">
              <p>
 		- Launch of Cold storage as service<br>
-		- Launch of FLASH proprietary USB container for Cold storage<br>
-		- FLASH Decentralized Chat Service
-             </p>
+		- Launch of FLASH proprietary USB container for Cold storage
+		        </p>
              <time>FLASH Blockchain & Applications</time>
            </div>
          </li>
@@ -707,7 +711,8 @@
          <li>
            <div class="cont wow fadeInDown zl-timeline-style4" data-wow-duration="400ms" data-wow-delay="0ms">
              <p>
-                - FLASH Mobile Wallet 2.0 - Decentralized
+                - FLASH Mobile App Wallet 2.0 - Decentralized<br>
+                - FLASH Decentralized Chat Service
              </p>
              <time>FLASH Mobile Wallet</time>
            </div>
