--- a/header.html
+++ b/header.html
@@ -36,6 +36,7 @@
              <ul class="sub-menu">
                      <!-- <li><a href="https://blog.flashcoin.io/" target="_blank">Blog</a></li> -->
                      <li><a href="#social-forum" data-hash="social-forum">Social Forums</a></li>
+                     <li><a href="https://blog.flashcoin.io" target="_blank">Blog</a></li>
              </ul>
          </li>
    <li class="divider-mobile"></li><!-- /.divider-mobile -->
