--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
 	 <section id="team">
         <div class="container" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="3000">
             <div class="section-header our-team">
-                <h2 class="section-title wow fadeInDown">Our Team</h2>
+                <h2 class="section-title wow fadeInDown">Core Team</h2>
             </div>
             <div class="row">
                 <div class="col-sm-6 col-md-4">
