--- a/our-team.html
+++ b/our-team.html
@@ -29,7 +29,7 @@
 	 <section id="team" class="our-team-single">
         <div class="container" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="3000">
             <div class="section-header our-team">
-                <h2 class="section-title wow fadeInDown">Our Team</h2>
+                <h2 class="section-title wow fadeInDown">Core Team</h2>
             </div>
             <div class="row">
                 <div class="col-sm-6 col-md-3">
